// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transform rsc 1`] = `
"import * as React from "react"
import { Foo } from "bar"
    "
`;

exports[`transform rsc 2`] = `
""use client"

      import * as React from "react"
import { Foo } from "bar"
    "
`;

exports[`transform rsc 3`] = `
"import * as React from "react"
import { Foo } from "bar"
    "
`;

exports[`transform rsc 4`] = `
""use foo"

      import * as React from "react"
import { Foo } from "bar"

"use client"
    "
`;

exports[`transform rsc 5`] = `
"'use client'

      import * as React from 'react'
import { Foo } from 'bar'
    "
`;

exports[`transform rsc 6`] = `
"import * as React from 'react'
import { Foo } from 'bar'
    "
`;

exports[`transform rsc 7`] = `
"'use foo'

      import * as React from 'react'
import { Foo } from 'bar'

'use client'
    "
`;
